--- a/Principal.resx
+++ b/Principal.resx
@@ -154,4 +154,7 @@
         0qVLly5damfYsP8BjD71KAfn9x8AAAAASUVORK5CYII=
 </value>
   </data>
+  <metadata name="timerCadastro.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
 </root>
